form spacing fix

--- a/css/ifx-2021.css
+++ b/css/ifx-2021.css
@@ -1253,8 +1253,12 @@ div#main {
           background-size: 25px; }
         .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li .ginput_container.ginput_complex span {
           margin-bottom: 0; }
-          .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li .ginput_container.ginput_complex span:first-child {
-            margin-bottom: 2.4rem; }
+          @media (max-width: 767px) {
+            .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li .ginput_container.ginput_complex span {
+              padding: 0; } }
+          @media (max-width: 641px) {
+            .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li .ginput_container.ginput_complex span:first-child {
+              margin-bottom: 2.4rem; } }
       .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li:last-child {
         margin: 0 0 4rem; }
         .ifx-row-form .form__wrapper .form__single .gform_wrapper .gform_body ul li:last-child.field_description_below {
